--- a/Building_model_Annoté.ipynb
+++ b/Building_model_Annoté.ipynb
@@ -295,7 +295,7 @@
    "id": "7e6c3526-c858-4a8e-bc39-2adf979aa447",
    "metadata": {},
    "source": [
-    "This is the basic model that will be used as the referance for the future comparisons. It is possible to observe that the timestep is approximately minutes. The timestep is the length of an observation between two values. Then, the settling time is 2,04 days. The settling time is the length of time to reach a steady time of state."
+    "This is the basic model that will be used as the reference for the future comparisons. It is possible to observe that the timestep is approximately 8 minutes. The timestep is the length of an observation between two values. Then, the settling time is 2,04 days. The settling time is the length of time to reach a steady time of state."
    ]
   },
   {
@@ -696,7 +696,7 @@
    "id": "e0003b6d-5a37-4526-8bb6-074a0f415c33",
    "metadata": {},
    "source": [
-    "Now, we want to observe the influence of the color of the exterior layer of the concrete on the settling time and timestep. We chose white walls instead of darker ones. So , the long wave emmisivity is now 0.15 for the concrete instead of the original 0.85."
+    "Now, we want to observe the influence of the color of the exterior layer of the concrete on the settling time and timestep. We chose white walls instead of darker ones. So , the long wave emisivity is now 0.15 for the concrete instead of the original 0.85."
    ]
   },
   {
@@ -1442,17 +1442,25 @@
    "id": "a7c03bec-0e39-4142-b9fb-6bd86b036877",
    "metadata": {},
    "source": [
-    "As observed in the table, the settling time has been reduced of approximately 300 seconds with the third modification. We can easily say that it is pretty much the same one. This can be explained by the fact that the model is the same expect that the geometry of the length of the room has been increase 10 times. The width of the wall are the same in the two models. Therefore, the thermal enery have to move accross the same resistance. This is why the reach of the steady-state is the same.\n",
+    "As observed in the table, the settling time has been reduced of approximately 300 seconds with the third modification. We can easily say that it is pretty much the same one. This can be explained by the fact that the model is the same expect that the geometry of the length of the room has been increased 10 times. The width of the wall are the same in the two models. Therefore, the thermal enery have to move accross the same resistance. This is why the reach of the steady-state is the same.\n",
     "For the timestep, we see that it has been increased around 3 times the original one. This is because the new room is now significantly bigger than the first model. It is clear that more data/values has been collected through the process of simulation. Consequently, the timestep has to be way higher for a faster running code."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "895701d9-5224-4fa5-86d6-8aeb9aabc172",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98f5c3db",
+   "metadata": {},
+   "source": [
+    "To conclude, the modifications allowed us to understand that the most influent parameter amoung our variantes on the time to obtain the steady state is the width of the insulation. For another point of view we could observe the impact of the neglecting the thermal capacity of the air."
+   ]
   }
  ],
  "metadata": {
