--- a/Report_Building_model.ipynb
+++ b/Report_Building_model.ipynb
@@ -1440,6 +1440,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad0392ba",
+   "metadata": {},
+   "source": [
+    "As observed in the table, the settling time has been reduced of approximately 300 seconds with the third modification. We can easily say that it is pretty much the same one. This can be explained by the fact that the model is the same expect that the geometry of the length of the room has been increased 10 times. The width of the wall are the same in the two models. Therefore, the thermal enery have to move accross the same resistance. This is why the reach of the steady-state is the same.\n",
+    "For the timestep, we see that it has been increased around 3 times the original one. This is because the new room is now significantly bigger than the first model. It is clear that more data/values has been collected through the process of simulation. Consequently, the timestep has to be way higher for a faster running code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "00c5f1bb",
    "metadata": {},
    "source": [
@@ -1810,7 +1819,7 @@
    "id": "2ba7ffa6",
    "metadata": {},
    "source": [
-    "interpretation"
+    "We observe that the settling time is almost constant, the thermal capacity of the glass has no influence on it. However, the time step is increased by 180s. This is due to the fact that we neglect the part of the solar radiation that is absorbed by the glass. Thus, the simulation has less information to take into account, it is a simpler model. "
    ]
   },
   {
@@ -2181,7 +2190,7 @@
    "id": "9d3ab31b",
    "metadata": {},
    "source": [
-    "Interpretation"
+    "For this variante, the settling time is still constant but the time step is importantly increased (around 20 times the value of the initial simulation). In fact, there is very less information to analyze by the program as the thermal capacity of the indoor air is neglected. We don’t take into account the quantity of heat needed for the air and the glass to increase their temperature. It’s like these 2 materials cannot store energy in them. They will not absorb heat energy and so they will heat up faster. "
    ]
   },
   {
@@ -2194,19 +2203,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7c03bec-0e39-4142-b9fb-6bd86b036877",
-   "metadata": {},
-   "source": [
-    "As observed in the table, the settling time has been reduced of approximately 300 seconds with the third modification. We can easily say that it is pretty much the same one. This can be explained by the fact that the model is the same expect that the geometry of the length of the room has been increased 10 times. The width of the wall are the same in the two models. Therefore, the thermal enery have to move accross the same resistance. This is why the reach of the steady-state is the same.\n",
-    "For the timestep, we see that it has been increased around 3 times the original one. This is because the new room is now significantly bigger than the first model. It is clear that more data/values has been collected through the process of simulation. Consequently, the timestep has to be way higher for a faster running code."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "98f5c3db",
    "metadata": {},
    "source": [
-    "In conclusion, we apply different modifications on the initial model. After changing the insulation's width, the color of concrete and the length of the walls, we observe that the width of insulation has the biggest impacts on the time to reach steady-state. On the contrary, the wall length didn't change a thing to it as the model remain almost the same. Also, changing the color of concrete to a white one is unsubstantial, but maybe the easiest option on a construction site. The timestep of the 3 new models were almost the same as the original one. It is hard to provide a real difference between all of them."
+    "In conclusion, we apply different modifications on the initial model. After changing the insulation's width, the color of concrete and the length of the walls, we observe that the width of insulation has the biggest impacts on the time to reach steady-state. On the contrary, the wall length didn't change a thing to it as the model remain almost the same. Also, changing the color of concrete to a white one is unsubstantial, but maybe the easiest option on a construction site. \n",
+    "\n",
+    "The timestep of the 3 first variantes were almost the same as the original one. It is hard to provide a real difference between all of them. Nevertheless, when we neglect the thermal capacity of the glass (Variante 4) or both of the glass and air (Variante 5), the time step increases. The model is simpler with less information to treat as with this simplification, these two materials don’t store energy. There is less important information between two time steps. "
    ]
   },
   {
@@ -2761,7 +2763,7 @@
    "id": "15f60d6b",
    "metadata": {},
    "source": [
-    "In this table Φo represent the solar radiation absorbed by the outdoor surface of the wall, Φi the solar radiation absorbed by the indoor surface of the wall,Φa the solar radiation absorbed by the glass, Qa the auxiliary (internal) sources and finally Etot represent the total solar irradiance on the wall in W/m^2."
+    "In this table Φo represents the solar radiation absorbed by the outdoor surface of the wall, Φi the solar radiation absorbed by the indoor surface of the wall,Φa the solar radiation absorbed by the glass, Qa the auxiliary (internal) sources and finally Etot represents the total solar irradiance on the wall in W/m^2."
    ]
   },
   {
@@ -2769,7 +2771,7 @@
    "id": "87e62ccb",
    "metadata": {},
    "source": [
-    "We also take in count the countroller. To begin, the indoor air temperature is controlled."
+    "We also take into account the controller. To begin, the indoor air temperature is controlled."
    ]
   },
   {
@@ -2890,7 +2892,7 @@
    "id": "65903afc",
    "metadata": {},
    "source": [
-    "We now want to observe firstly the impact of the chose period (winter or summer) and secondly to schedule of the auxiliary heat sources. After that we will see the difference between the system with or without controller."
+    "We now want to observe firstly the impact of the chosen period (winter or summer) and secondly to schedule the auxiliary heat sources. After that we will see the difference between the system with or without controller."
    ]
   },
   {
@@ -2898,7 +2900,7 @@
    "id": "499ba92c",
    "metadata": {},
    "source": [
-    "## Impact of the chose period"
+    "## Impact of the chosen period"
    ]
   },
   {
@@ -3503,7 +3505,7 @@
    "id": "715e8622",
    "metadata": {},
    "source": [
-    "On va comparer la simulation été et hiver avec ou sans controleur. Pour cela on reprend le modèle été/hiver des parties précédentes auquel on ajoute les sources de chaleur auxiliaire."
+    "We will compare the simulation in winter and in summer both with and without controller. To do that, we use the summer/winter model from previous parts and we add the auxiliary heat sources. "
    ]
   },
   {
@@ -4104,7 +4106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
