--- a/Report_Building_model (4).ipynb
+++ b/Report_Building_model (4).ipynb
@@ -2208,7 +2208,7 @@
    "id": "98f5c3db",
    "metadata": {},
    "source": [
-    "In conclusion, different modifications were applied on a certain initial model. After changing the insulation's width, the color of concrete, the length of the walls, we observe that the width of insulation has the biggest impacts on the time to reach steady-state. On the contrary, the wall length didn't change a thing to it as the model remain almost the same. Also, changing the color of concrete to a white one is unsubstantial, but maybe the easiest option on a construction site. \n",
+    "In conclusion, different modifications were applied on a certain initial model. After changing the insulation's width, the color of concrete, the length of the walls, we observe that the width of insulation has the biggest impacts on the time to reach steady-state. On the contrary, the wall length didn't change a thing to it as the model remain almost the same.\n",
     "\n",
     "The timestep of the 3 first variantes were almost the same as the original one. It is hard to provide a real difference between all of them. Nevertheless, when we neglect the thermal capacity of the glass (Variante 4) or both of the glass and air (Variante 5), the time step increases. The model is simpler with less information to treat as with this simplification, these two materials don’t store energy. There is less important information between two time steps. After neglecting air and glass thermal capactities, we can conclude that they generate way less values as the timesteps increase a lot contrary to settling time."
    ]
@@ -2775,7 +2775,7 @@
    "id": "87e62ccb",
    "metadata": {},
    "source": [
-    "Afterwards, we also took into account the controller. In this section, the controlled indoor air temperature will act as a controller. It will be set to 20C as a constant temperature."
+    "Afterwards, we also took into account the controller. In this section, the controlled indoor air temperature will act as a controller. It will be set to 20°C as a constant temperature."
    ]
   },
   {
@@ -3267,6 +3267,7 @@
    "metadata": {},
    "source": [
     "We can compare the 2 graphics:\n",
+    "\n",
     "![summer](Summer_simulation.svg)\n",
     "> Figure 1. Summer simulation\n",
     "\n",
@@ -3279,7 +3280,7 @@
    "id": "a12799cf-d1e7-4c50-a691-ccea4e32f031",
    "metadata": {},
    "source": [
-    "As we can see in the graphs, the indoor temperature stays the same between 15C and 20C. This is due because we active the hvac system which is acting as a controller inside the room. The total emissions are way higher during summer which can explains also higher overall temperature than during the winter time. When the outdoor temperature is minus zero, the qhvac is over zero. We are in an heating mode. On the contrary, when outdoor temperature is below the freezing point of water, the qhvac is negative and operates in air conditioning. "
+    "As we can see in the graphs, the indoor temperature stays the same between 15°C and 20°C. This is due because we active the hvac system which is acting as a controller inside the room. The total emissions are way higher during summer which can explains also higher overall temperature than during the winter time. When the outdoor temperature is minus zero, the qhvac is over zero. We are in an heating mode. On the contrary, when outdoor temperature is below the freezing point of water, the qhvac is negative and operates in air conditioning. "
    ]
   },
   {
@@ -3325,8 +3326,8 @@
     }
    ],
    "source": [
-    "start_date = '07-01 12:00:00'\n",
-    "end_date = '07-07 18:00:00'\n",
+    "start_date = '02-01 12:00:00'\n",
+    "end_date = '02-07 18:00:00'\n",
     "\n",
     "start_date = '2000-' + start_date\n",
     "end_date = '2000-' + end_date\n",
@@ -3481,7 +3482,8 @@
    "id": "ecef3b35",
    "metadata": {},
    "source": [
-    "Pour rappel le graphe de la simulation initale est:\n",
+    "As a reminder, the graph of the inital simulation is:\n",
+    "\n",
     "![summer](Inital_simulation.svg)\n",
     "> Figure 3. Inital Simulation"
    ]
@@ -3491,7 +3493,7 @@
    "id": "a14af2bd",
    "metadata": {},
    "source": [
-    "For this section, we simulate only 6 days during summer. We added new interior auxiliary heat sources which are humans, lights and computers. The indoor temperature seems to be higher than previously. In fact, it was more between 15C and 20C. Now, with the new sources, the indoor temperature tends towards 17C and 22C. So, we can easily confirm that the new sources really emit heat. With that information, it is possible to confirm why the qhvac is always negative during this period. It is because it operates in air conditioner mode. Each day, the peaks of air conditioning matches perfectly the moment of Etotal max."
+    "For this section, we simulate only 6 days during summer. We added new interior auxiliary heat sources which are humans, lights and computers. The indoor temperature seems to be higher than previously. In fact, it was more between 15°C and 20°C. Now, with the new sources, the indoor temperature tends towards 17°C and 22°C. So, we can easily confirm that the new sources really emit heat. With that information, it is possible to confirm why the qhvac is always negative during this period. It is because it operates in air conditioner mode. Each day, the peaks of air conditioning matches perfectly the moment of Etotal max."
    ]
   },
   {
@@ -4085,19 +4087,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cdc33a81",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "f1307d64-5f7e-4da1-a208-31a4f1d6b16f",
    "metadata": {},
    "source": [
-    "For the uncontrolled model with the winter conditions, we can start by seeing that the interior temperature varies a lot during the simulation. This is normal, because the interior temperature is not fixed by a controller, so it can vary according to the loses and the gains in thermic energy from the different sources. We can also see that the exterior temperature is inferior to the interior temperature. This is completely normal, because the auxiliary sources, like the person working or the computer running, gives up heat in the room.\n",
+    "For the uncontrolled model with the summer conditions, we can start by seeing that the interior temperature varies a lot during the simulation. This is normal, because the interior temperature is not fixed by a controller, so it can vary according to the loses and the gains in thermic energy from the different sources. We can also see that the exterior temperature is inferior to the interior temperature. This is completely normal, because the auxiliary sources, like the person working or the computer running, gives up heat in the room.\n",
     "For the heat flows, we can see that, because the model is uncontrolled, the HVAC system has no heat flows. This is explained by the fact that because the objective of the HVAC is to stabilize the temperature to the one designated by the controller. Therefore, where there is no controller, the temperature, like we analyzed before, can vary and the HVAC system is not use. The Etotal…"
    ]
   },
