--- a/Report_Building_model (4) (1).ipynb
+++ b/Report_Building_model (4) (1).ipynb
@@ -2896,7 +2896,7 @@
    "id": "65903afc",
    "metadata": {},
    "source": [
-    "On those graphics, we observe that the indoor temperature is pretty much the same through the 6 days of observations. The outdoor temperature seems hotter during the day when the Etotal is at its peak of the day. This is why the indoor temperature is warmer half of the day. Otherwise, at night, the outside and inside temperatures are colder when the emissions are non-existant."
+    "On those graphics, we observe that the indoor temperature is pretty much the same through the 6 days of observations. As we decided, the interior temperature during the day is controlled at 20°C, and is around 15°C during the night. The outdoor temperature is cooler during than the interior temperature. The outdoor temperature seems hotter during the day when the Etotal is at its peak of the day. This is why the indoor temperature is warmer half of the day. Otherwise, at night, the outside and inside temperatures are colder when the emissions are non-existant."
    ]
   },
   {
@@ -3280,7 +3280,8 @@
    "id": "a12799cf-d1e7-4c50-a691-ccea4e32f031",
    "metadata": {},
    "source": [
-    "As we can see in the graphs, the indoor temperature stays the same between 15°C and 20°C. This is due because we active the hvac system which is acting as a controller inside the room. The total emissions are way higher during summer which can explains also higher overall temperature than during the winter time. When the outdoor temperature is minus zero, the qhvac is over zero. We are in an heating mode. On the contrary, when outdoor temperature is below the freezing point of water, the qhvac is negative and operates in air conditioning. "
+    "As we can see in the graphs, the indoor temperature stays the same between 15°C during the night to 20°C during the day. The outdoor temperature is higher than the indoor temperature during the summer and the opposite during the winter.\n",
+    "The indoor temperature stays inside the limits we put during summer and winter, because we active the hvac system which is acting as a controller inside the room. The HVAC system provide thermic energy to the room in the winter to compensate the losses and takes out thermic energy in the room during the summer to compensate the gains. Therefore, the HVAC is positive during winter (heating mode) and negative during summer (climatisation mode)."
    ]
   },
   {
@@ -3493,8 +3494,9 @@
    "id": "a14af2bd",
    "metadata": {},
    "source": [
-    "ATTENTION:  A MODIFIER AVANT ERREUR DE CODE\n",
-    "For this section, we simulate only 6 days during summer. We added new interior auxiliary heat sources which are humans, lights and computers. The indoor temperature seems to be higher than previously. In fact, it was more between 15°C and 20°C. Now, with the new sources, the indoor temperature tends towards 17°C and 22°C. So, we can easily confirm that the new sources really emit heat. With that information, it is possible to confirm why the qhvac is always negative during this period. It is because it operates in air conditioner mode. Each day, the peaks of air conditioning matches perfectly the moment of Etotal max."
+    "IMPACT OF AUXILIARY SOURCES:\n",
+    "For this section, we analyze the impact of the auxiliary sources on the temperature and the heat flows. For this, we simulate only 6 days during winther (indoor temperature higher than outdoor temperature). The auxiliary heat sources modeled are humans, lights and computers. What we can analyse is that the indoor temperature seems to be higher than without the auxiliary sources. In fact, it was more between 15°C and 20°C. Now, with the new sources, the indoor temperature tends towards 17°C and 22°C. That is normal, because the new sources emit heat, so the temperature increase. \n",
+    "For the heat flows, we can see that the HVAC system provide more thermic energy in the model without auxiliary sources than the model with. Because the auxiliary sources emit thermic energy, the energy that the HVAC system needs to provide is therfore less."
    ]
   },
   {
@@ -3801,8 +3803,16 @@
    "id": "3f37ea67",
    "metadata": {},
    "source": [
+    "WINTER CONDITIONS - CONTROLLED MODEL:\n",
     "For the controlled model with the winter conditions, we can start by seeing that the interior temperature varies each day from 20°C during the day to 15°C during the night. This is normal, because the definition of having a controller is to decide what temperature you want inside your room. Therefore, the fact that the temperature is stable means that it is controlled by a thermostat by example. We can also see that the exterior temperature is inferior to the interior temperature. This is completely normal, and this represents, like in our case, winter conditions.\n",
-    "For the heat flows, we can see that, because the model is controlled, the HVAC system has a heat flows, because the HVAC has the objective to stabilize the temperature to the one designated. In this case, because we are in winter conditions, and therefore we are losing, often but not always like we can see, more thermic energy from conduction through the walls and the window than we are gaining thermic energy from the auxiliary sources and from the sun, the HVAC system need to compensate this lost by providing thermic energy inside the room. That is why the heat flows is in majority positive, and so we call that heating. The Etotal…"
+    "For the heat flows, we can see that, because the model is controlled, the HVAC system has a heat flows, because the HVAC has the objective to stabilize the temperature to the one designated. In this case, because we are in winter conditions, and therefore we are losing, often but not always like we can see, more thermic energy from conduction through the walls and the window than we are gaining thermic energy from the auxiliary sources and from the sun, the HVAC system need to compensate this lost by providing thermic energy inside the room. That is why the heat flows is in majority positive, and so we call that heating.\n",
+    "\n",
+    "WINTER CONDITIONS - UNCONTROLLED MODEL:\n",
+    "For the uncontrolled model with the winter conditions, we can start by seeing that the interior temperature varies a lot during the simulation. This is normal, because the interior temperature is not fixed by a controller, so it can vary according to the loses and the gains in thermic energy from the different sources. We can also see that the exterior temperature is inferior to the interior temperature. This is completely normal, because the auxiliary sources, like the person working or the computer running, gives up heat in the room.\n",
+    "For the heat flows, we can see that, because the model is uncontrolled, the HVAC system has no heat flows. This is explained by the fact that because the objective of the HVAC is to stabilize the temperature to the one designated by the controller. Therefore, where there is no controller, the temperature, like we analyzed before, can vary and the HVAC system is not use.\n",
+    "\n",
+    "CONCLUSION/COMPARAISON:\n",
+    "In conclusion, the fact of putting a controller on the interior temperature allow us to have a constant temperature during the day and the night. This is done by having a HVAC system that provide or remove thermic energy in the model to keep the temperature needed. Finally, we can see that in both model, the Etotal from the sun is the same, because this is independent from the fact that the temperature is controlled or not."
    ]
   },
   {
@@ -4092,8 +4102,16 @@
    "id": "f1307d64-5f7e-4da1-a208-31a4f1d6b16f",
    "metadata": {},
    "source": [
+    "SUMMER CONDITIONS - CONTROLLED MODEL:\n",
+    "For the controlled model with the summer conditions, we can start by seeing that the interior temperature varies each day from 22°C during the day to 16°C during the night. This is normal, because the definition of having a controller is to decide what temperature you want inside your room. Therefore, the fact that the temperature is stable means that it is controlled by a thermostat by example. We can also see that the exterior temperature is superior to the interior temperature. This is completely normal, and this represents, like in our case, summer conditions.\n",
+    "For the heat flows, we can see that, because the model is controlled, the HVAC system has a heat flows, because the HVAC has the objective to stabilize the temperature to the one designated. In this case, because we are in summer conditions, and therefore we are gaining, often but not always like we can see, more thermic energy inside the room than we are losing outside the room, the HVAC system need to compensate this gain by extracting thermic energy inside the room. This is done by evacuating inside air that is hot and replacing it by air that has been cooled down. That is why the heat flows is in majority negative, and so we call that climatisation.\n",
+    "\n",
+    "SUMMER CONDITIONS - UNCONTROLLED MODEL:\n",
     "For the uncontrolled model with the summer conditions, we can start by seeing that the interior temperature varies a lot during the simulation. This is normal, because the interior temperature is not fixed by a controller, so it can vary according to the loses and the gains in thermic energy from the different sources. We can also see that the exterior temperature is inferior to the interior temperature. This is completely normal, because the auxiliary sources, like the person working or the computer running, gives up heat in the room.\n",
-    "For the heat flows, we can see that, because the model is uncontrolled, the HVAC system has no heat flows. This is explained by the fact that because the objective of the HVAC is to stabilize the temperature to the one designated by the controller. Therefore, where there is no controller, the temperature, like we analyzed before, can vary and the HVAC system is not use. The Etotal…"
+    "For the heat flows, we can see that, because the model is uncontrolled, the HVAC system has no heat flows. This is explained by the fact that because the objective of the HVAC is to stabilize the temperature to the one designated by the controller. Therefore, where there is no controller, the temperature, like we analyzed before, can vary and the HVAC system is not use.\n",
+    "\n",
+    "CONCLUSION/COMPARAISON:\n",
+    "In conclusion, the fact of putting a controller on the interior temperature allow us to have a constant temperature during the day and the night. This is done by having a HVAC system that provide or remove thermic energy in the model to keep the temperature needed. Finally, we can see that in both model, the Etotal from the sun is the same, because this is independent from the fact that the temperature is controlled or not."
    ]
   },
   {
@@ -4109,7 +4127,7 @@
    "id": "5de47b4e-a64c-406b-bc85-c9052170fc12",
    "metadata": {},
    "source": [
-    "For the temperature, we can compare that the interior temperature is generally lower in the uncontrolled model than in the controlled model for the winter conditions. This is normal, because generally, the HVAC system work in heating mode during the winter, and therefore provide thermic energy inside the room to raise the temperature. The Etotal is the same in both scenario, because the fact that the room is controlled or not has zero influence on the quantity of energy thermic that is absorbed by the room from the sun."
+    "TO BE DONE"
    ]
   }
  ],
